<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="age_text">Age</string>
    <string name="BMI_text">BMI</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="gender_text">Gender</string>
    <string name="Activity_level_text">Activity level</string>
    <string name="want_to_text">Want to</string>
    <string name="goal_time_frame_text">Months to achieve goal</string>
    <string name="cm_text">cm</string>
    <string name="kg_text">kg</string>
    <string name="confirm_text">Confirm</string>
    <string name="no_value_text">No value</string>
    <string name="warning_fill_in_text">Please fill in all the stats!</string>
    <string name="height_cm_text">Height (cm)</string>
    <string name="weight_kg_text">Weight (kg)</string>
    <string name="goal_text">Goal</string>
    <string name="fitness_goal">%1$s %2$dkg in %3$d months</string>
    <string name="calorie_information_text">Daily caloric information</string>
    <string name="bmr_text">BMR</string>
    <string name="maintenance_text">Maintain current weight</string>
    <string name="goal_calories_text">Meet your goal</string>
    <string name="stats_text">Basic stats</string>
    <string name="food_page_button">Food tracker</string>
    <string name="schedule_text">Schedule</string>
    <string name="create_workouts_text">Create workouts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_text">M</string>
    <string name="t_text">T</string>
    <string name="w_text">W</string>
    <string name="f_text">F</string>
    <string name="s_text">S</string>
    <string name="goal_food_page">Calories: %1$d of %2$d</string>
    <string name="search_food_text">Search for any food...</string>
    <string name="search_text">Search</string>
    <string name="name_text">Name</string>
    <string name="calories_text">Calories</string>
    <string name="add_food_text">You added \"%1$s\" to your daily log.</string>
    <string name="back_to_foodpage_text">Back to foodtracker</string>
    <string name="add_food_explain_text">Click on one of the foods to add it to the food tracker.</string>
    <string name="back_text">Back</string>
    <string name="fats_text">Fats</string>
    <string name="protein_text">Protein</string>
    <string name="carbs_text">Carbohydrates</string>
    <string name="add_to_text">Add to:</string>
    <string name="today_text">Today</string>
    <string name="workouts_text">Your workouts</string>
    <string name="add_training_text">Add training</string>
    <string name="add_exercise_text">Add exercise</string>
    <string name="Finish_text">Finish</string>
    <string name="sets_text">Sets</string>
    <string name="reps_text">Reps</string>
    <string name="rest_time_text">Rest time</string>
    <string name="minutes_text">min</string>
    <string name="duration_text">Duration</string>
    <string name="exercises_text">Exercises</string>
    <string name="add_workout_warning">Enter a name and add at least one exercise.</string>
    <string name="add_exercise_warning">Fill in all the fields.</string>
    <string name="add_a_workout_text">Add a workout</string>
    <string name="time_seperator_text">:</string>
    <string name="day_text">Day</string>
    <string name="time_text">Starting time</string>
    <string name="workout_text">Workout</string>
    <string name="add_text">Add</string>
    <string name="workout_time">%1$s:%2$s - %3$s:%4$s</string>
    <string name="duration_schedule_text">%1$d min</string>
    <string name="schedule_time_check">Enter a valid time.</string>
    <string name="exercise_number_text">%1$d.</string>
</resources>

