<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddFoodFragment">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/svFood"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/searchview_border"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@+id/btnFood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_food_text" />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/search_text"
        app:layout_constraintBottom_toBottomOf="@+id/svFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/svFood" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoodChoices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTitle" />

    <TextView
        android:id="@+id/tvNameTitle"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExplain" />

    <TextView
        android:id="@+id/tvCaloriesTitle"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="20dp"
        android:text="@string/calories_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExplain" />

    <Button
        android:id="@+id/btnBackFoodTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:drawableStart="@drawable/ic_baseline_chevron_left_24"
        android:text="@string/back_to_foodpage_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvExplain"
        style="@style/GreyBlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_food_explain_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svFood" />

    <TextView
        android:id="@+id/tvAddText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="5dp"
        android:text="@string/add_to_text"
        app:layout_constraintBottom_toTopOf="@+id/svFood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/spinner_background"
        android:gravity="end"
        android:overlapAnchor="false"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddText"
        app:layout_constraintStart_toEndOf="@+id/tvAddText"
        app:layout_constraintTop_toTopOf="@+id/tvAddText" />

</androidx.constraintlayout.widget.ConstraintLayout>