<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddExerciseFragment">


    <TextView
        android:id="@+id/tvTitle"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_exercise_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:drawableStart="@drawable/ic_baseline_chevron_left_24"
        android:text="@string/back_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/add_exercise_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvName"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/name_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvSets"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/sets_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvReps"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/reps_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSets" />

    <TextView
        android:id="@+id/tvRestTime"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/rest_time_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReps" />

    <TextView
        android:id="@+id/tvWeight"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/weight_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRestTime" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <EditText
        android:id="@+id/etSets"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSets" />

    <EditText
        android:id="@+id/etReps"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvReps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvReps" />

    <EditText
        android:id="@+id/etRestTime"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRestTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRestTime" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWeight" />

    <TextView
        android:id="@+id/tvRestTimeIndicator"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/minutes_text"
        app:layout_constraintBottom_toBottomOf="@+id/etRestTime"
        app:layout_constraintStart_toEndOf="@+id/etRestTime"
        app:layout_constraintTop_toTopOf="@+id/etRestTime" />

    <TextView
        android:id="@+id/tvWeightIndicator"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/kg_text"
        app:layout_constraintBottom_toBottomOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toTopOf="@+id/etWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>