<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsProfileFragment">

    <TextView
        android:id="@+id/tvGenderText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/gender_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAgeText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/age_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderText" />

    <TextView
        android:id="@+id/tvHeightText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/height_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAgeText" />

    <TextView
        android:id="@+id/tvWeightText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/weight_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeightText" />

    <TextView
        android:id="@+id/tvActivityLevelText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/Activity_level_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeightText" />

    <TextView
        android:id="@+id/tvWantToText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/want_to_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivityLevelText" />

    <TextView
        android:id="@+id/tvTimeFrameText"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/goal_time_frame_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWantToText" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_background"
        android:gravity="end"
        android:overlapAnchor="false"
        app:layout_constraintBottom_toBottomOf="@+id/tvGenderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGenderText" />

    <Spinner
        android:id="@+id/spinnerGoal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/spinner_background"
        android:overlapAnchor="false"
        app:layout_constraintBottom_toBottomOf="@+id/tvWantToText"
        app:layout_constraintStart_toEndOf="@+id/tvWantToText"
        app:layout_constraintTop_toTopOf="@+id/tvWantToText" />

    <Spinner
        android:id="@+id/spinnerActivityLevel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_background"
        android:overlapAnchor="false"
        app:layout_constraintBottom_toBottomOf="@+id/tvActivityLevelText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvActivityLevelText" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAgeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAgeText" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:autofillHints="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeightText" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:autofillHints="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWeightText" />

    <EditText
        android:id="@+id/etGoalWeight"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:autofillHints="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWantToText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWantToText" />

    <EditText
        android:id="@+id/etGoalMonths"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimeFrameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTimeFrameText" />

    <TextView
        android:id="@+id/tvHeightIndicator"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/cm_text"
        app:layout_constraintBottom_toBottomOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etHeight"
        app:layout_constraintTop_toTopOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvWeightIndicator"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/kg_text"
        app:layout_constraintBottom_toBottomOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toTopOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvWeightIndicator2"
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/kg_text"
        app:layout_constraintBottom_toBottomOf="@+id/etGoalWeight"
        app:layout_constraintStart_toEndOf="@+id/etGoalWeight"
        app:layout_constraintTop_toTopOf="@+id/etGoalWeight" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeFrameText" />

</androidx.constraintlayout.widget.ConstraintLayout>